@@ -11,6 +11,9 @@ Included
 - Gate enforces docs/update discipline: code changes without operator-facing doc updates fail with `VERIFY360_DOC_SYNC_MISSING`.
 - Gate now uses explicit state progression and two-phase output finalize (`stage -> finalize`) with `verify_360_output_manifest.json`.
 - Gate receipt now carries deterministic evidence-chain links and idempotence key context for repeatable audit comparison.
+- Gate idempotence is now enforced for duplicate-key replays:
+- duplicate-key runs still emit full receipts/reports but suppress `out/verify_360/latest.txt` pointer advance to prevent double-apply state movement.
+- receipt includes explicit idempotence mode and prior-run linkage (`NEW`/`REPLAY`/`PARTIAL`).
 - Universal artifact adapter expansion (analysis-only, deterministic, fail-closed):
 - New safe-run adapter flags: `--adapter auto|none|archive|package|extension|iac|cicd|document|container|image|scm|signature`
 - Optional repeatable plugin flag: `--enable-plugin <name>` (explicit local plugin use only)
